Добавление команды !арт (пездец день ее делал) Исправление подсчета времени (возможно, я хз)